added bond template

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -77,6 +77,10 @@
     <table>
         <tr>
             <td class="sheet-momentum" width="10%">
+                <div class="sheet-momentum-burn">
+                    <input type="checkbox" class="sheet-hidden-flex" id="burnMomentum" title="Burn Momentum" name="attr_momentumBurn"></input>
+                    <label class="sheet-momentum-burn" for="burnMomentum">Burn</label>
+                </div>
                 <div class="sheet-momentum-box">
                     <h3>+10</h3>
                     <input type="radio" name="attr_momentum" value="10">
@@ -162,32 +166,32 @@
             <td class="sheet-tracks" width="69%">
                 <div class="sheet-stats">
                     <div class="sheet-stat">
-                        <button type="roll" title="Roll +Edge" name="rollEdge"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{edge}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                        <button type="roll" title="Roll +Edge" name="attr_rollEdge"
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{edge}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+?{Modifier|0})-(@{momentum})]]}} {{Button=[Burn Momentum](~@{character_name}|momentumBurn)}}"></button>
                         <h3 class="sheet-stats-title">EDGE</h3>
                         <input type="text" class="sheet-stats-input" name="attr_edge" value="1">
                     </div>
                     <div class="sheet-stat">
-                        <button type="roll" title="Roll +Iron" name="rollIron"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{iron}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{iron}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{iron}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                        <button type="roll" title="Roll +Iron" name="attr_rollIron"
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{iron}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{iron}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{iron}+?{Modifier|0})-(@{momentum})]]}} {{Button=[Burn Momentum](~@{character_name}|momentumBurn)}}"></button>
                         <h3 class="sheet-stats-title">IRON</h3>
                         <input type="text" class="sheet-stats-input" name="attr_iron" value="1">
                     </div>
                     <div class="sheet-stat">
-                        <button type="roll" title="Roll +Heart" name="rollHeart"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name= Roll +heart}} {{action=[[1d6+@{heart}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{heart}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{heart}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{heart}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                        <button type="roll" title="Roll +Heart" name="attr_rollHeart"
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name= Roll +heart}} {{action=[[1d6+@{heart}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{heart}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{heart}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{heart}+?{Modifier|0})-(@{momentum})]]}} {{Button=[Burn Momentum](~@{character_name}|momentumBurn)}}"></button>
                         <h3 class="sheet-stats-title">HEART</h3>
                         <input type="text" class="sheet-stats-input" name="attr_heart" value="1">
                     </div>
                     <div class="sheet-stat">
-                        <button type="roll" title="Roll +Shadow" name="rollShadow"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{shadow}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{shadow}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{shadow}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                        <button type="roll" title="Roll +Shadow" name="attr_rollShadow"
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{shadow}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{shadow}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{shadow}+?{Modifier|0})-(@{momentum})]]}} {{Button=[Burn Momentum](~@{character_name}|momentumBurn)}}"></button>
                         <h3 class="sheet-stats-title">SHADOW</h3>
                         <input type="text" class="sheet-stats-input" name="attr_shadow" value="1">
                     </div>
                     <div class="sheet-stat">
-                        <button type="roll" title="Roll +Wits" name="rollWits"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{wits}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{wits}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{wits}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                        <button type="roll" title="Roll +Wits" name="attr_rollWits"
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{wits}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{wits}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{wits}+?{Modifier|0})-(@{momentum})]]}} {{Button=[Burn Momentum](~@{character_name}|momentumBurn)}}"></button>
                         <h3 class="sheet-stats-title">WITS</h3>
                         <input type="text" class="sheet-stats-input" name="attr_wits" value="1">
                     </div>
@@ -6578,7 +6582,7 @@
         </tr>
         <!--Strong Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Momentum Burn: Strong Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Burn Momentum: Strong Hit</td>
         </tr>
         {{/rollGreater() momentum challenge2}}
         {{/^rollGreater() action challenge2}}
@@ -6597,7 +6601,7 @@
         </tr>
         <!--Strong Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Momentum Burn: Strong Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Burn Momentum: Strong Hit</td>
         </tr>
         {{/rollGreater() momentum challenge1}}
         {{/rollTotal() challenge1 challenge2}}
@@ -6615,7 +6619,7 @@
         </tr>
         <!--Strong Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Momentum Burn: Strong Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Burn Momentum: Strong Hit</td>
         </tr>
         {{/rollGreater() momentum challenge2}}
         {{/rollGreater() momentum challenge1}}
@@ -6633,7 +6637,7 @@
         </tr>
         <!--Strong Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Momentum Burn: Strong Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Burn Momentum: Strong Hit</td>
         </tr>
         {{/rollGreater() momentum challenge2}}
         {{#^rollGreater() momentum challenge2}}
@@ -6643,7 +6647,7 @@
         </tr>
         <!--Weak Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Momentum Burn: Weak Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Burn Momentum: Weak Hit</td>
         </tr>
         {{/^rollGreater() momentum challenge2}}
         {{/rollGreater() momentum challenge1}}
@@ -6655,7 +6659,7 @@
         </tr>
         <!--Weak Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Momentum Burn: Weak Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Burn Momentum: Weak Hit</td>
         </tr>
         {{/rollGreater() momentum challenge2}}
         {{/^rollGreater() momentum challenge1}}
@@ -6664,9 +6668,6 @@
         {{/^rollGreater() action challenge1}}
         {{/^rollTotal() action momentum_cancel}}
         {{/action}}
-        {{#burnMomentum}}
-            <tr><td colspan="2">Momentum has been burned and reset to {{momentumReset}}</td></tr>
-        {{/burnMomentum}}
         {{#vow}}
         <tr>
             <td colspan="2" class="sheet-subheader">{{header}}</td>
@@ -10223,7 +10224,14 @@ on('change:clear_vow_4', function() {
 on('change:clear_vow_5', function() {
     setAttrs({ 'vow5-0': '0', 'vow5-1': '0', 'vow5-2': '0', 'vow5-3': '0', 'vow5-4': '0', 'vow5-5': '0', 'vow5-6': '0', 'vow5-7': '0', 'vow5-8': '0', 'vow5-9': '0', clear_vow_5: 'off' });
 });
-
+on('change:momentumBurn', function(eventInfo) {
+    getAttrs([ "momentum_reset" ], function(values) {
+        setAttrs({ 
+            momentum: parseInt(values.momentum_reset),
+            momentumBurn: 'off'
+        });
+    });
+});
 on('change:repeating_assets:assettype', function(values) {
     setAttrs({
         ['repeating_assets_Asset' + values.previousValue]: 'off',
