--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -3,7 +3,6 @@
 <div class="grid navigation">
   <input name="attr_tab" type="radio" value="main"/><span data-i18n="Main">val</span>
   <input name="attr_tab" type="radio" value="equipment"/><span data-i18n="Equipment">val</span>
-  <input name="attr_tab" type="radio" value="log"/><span data-i18n="Log">val</span>
 </div>
 <div class="container">
   <input name="attr_tab" type="hidden" value="main"/>
@@ -736,11 +735,106 @@
       </div>
       <div class="grid box training-value">
         <h1 class="green-header" data-i18n="Training Value Bonus">Training Value Bonus</h1>
+        <div class="grid red-kits">
+          <div class="kits">
+            <h2 data-i18n="Archery Gear">Archery Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_ArcheryGear_30x30.png"/>
+            <input name="attr_archerygear" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Long Gun">Long Gun</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_LongGun_30x30.png"/>
+            <input name="attr_longgun" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Bludgeoning">Bludgeoning</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Bludgeoning_30x30.png"/>
+            <input name="attr_bludgeoning" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Pistol">Pistol</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Pistol_30x30.png"/>
+            <input name="attr_pistol" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Piercing">Piercing</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Piercing_30x30.png"/>
+            <input name="attr_piercing" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Throwing">Throwing</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Throwing_30x30.png"/>
+            <input name="attr_throwing" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Slashing">Slashing</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Slashing_30x30.png"/>
+            <input name="attr_slashing" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Martial Arts">Martial Arts</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_MartialArts_30x30.png"/>
+            <input name="attr_martialarts" type="number" value=""/>
+          </div>
+        </div>
+        <div class="grid green-kits">
+          <div class="kits">
+            <h2 data-i18n="Athletic Gear">Athletic Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_AthleticGear_30x30.png"/>
+            <input name="attr_athleticgear" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="First Aid Kits">First Aid Kits</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_FirstAid Kits_30x30.png"/>
+            <input name="attr_firstaid kits" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Swimming/Diving">Swimming/Diving</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Swimming/Diving_30x30.png"/>
+            <input name="attr_swimming_diving" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Climbing Gear">Climbing Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_ClimbingGear_30x30.png"/>
+            <input name="attr_climbinggear" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Medical Gear">Medical Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_MedicalGear_30x30.png"/>
+            <input name="attr_medicalgear" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Tools">Tools</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Tools_30x30.png"/>
+            <input name="attr_tools" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Climbing Gear">Climbing Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_ClimbingGear_30x30.png"/>
+            <input name="attr_climbinggear" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Medical Gear">Medical Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_MedicalGear_30x30.png"/>
+            <input name="attr_medicalgear" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Tools">Tools</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Tools_30x30.png"/>
+            <input name="attr_tools" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Command App">Command App</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_CommandApp_30x30.png"/>
+            <input name="attr_commandapp" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Recon Gear">Recon Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_ReconGear_30x30.png"/>
+            <input name="attr_recongear" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Value">Value</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Value_30x30.png"/>
+            <input name="attr_value" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Firefighting">Firefighting</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Firefighting_30x30.png"/>
+            <input name="attr_firefighting" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Survival Kit">Survival Kit</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_SurvivalKit_30x30.png"/>
+            <input name="attr_survivalkit" type="number" value=""/>
+          </div>
+          <div class="kits">
+            <h2 data-i18n="Vehicles">Vehicles</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Vehicles_30x30.png"/>
+            <input name="attr_vehicles" type="number" value=""/>
+          </div>
+        </div>
       </div>
     </div>
+    <div class="equipment tab"></div>
   </div>
-  <div class="equipment tab"></div>
-  <div class="log tab"></div>
 </div>
 <rolltemplate class="sheet-rolltemplate-ou">
     <table>
