--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -738,11 +738,11 @@
         <div class="grid red-kits">
           <div class="kits">
             <h2 data-i18n="Archery Gear">Archery Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_ArcheryGear_30x30.png"/>
-            <input name="attr_archerygear" type="number" value=""/>
+            <input name="attr_archery_gear" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Long Gun">Long Gun</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_LongGun_30x30.png"/>
-            <input name="attr_longgun" type="number" value=""/>
+            <input name="attr_long_gun" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Bludgeoning">Bludgeoning</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Bludgeoning_30x30.png"/>
@@ -766,29 +766,29 @@
           </div>
           <div class="kits">
             <h2 data-i18n="Martial Arts">Martial Arts</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_MartialArts_30x30.png"/>
-            <input name="attr_martialarts" type="number" value=""/>
+            <input name="attr_martial_arts" type="number" value=""/>
           </div>
         </div>
         <div class="grid green-kits">
           <div class="kits">
             <h2 data-i18n="Athletic Gear">Athletic Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_AthleticGear_30x30.png"/>
-            <input name="attr_athleticgear" type="number" value=""/>
+            <input name="attr_athletic_gear" type="number" value=""/>
           </div>
           <div class="kits">
-            <h2 data-i18n="First Aid Kits">First Aid Kits</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_FirstAid Kits_30x30.png"/>
-            <input name="attr_firstaid kits" type="number" value=""/>
+            <h2 data-i18n="First Aid Kits">First Aid Kits</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_FirstAidKits_30x30.png"/>
+            <input name="attr_first_aid_kits" type="number" value=""/>
           </div>
           <div class="kits">
-            <h2 data-i18n="Swimming/Diving">Swimming/Diving</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Swimming/Diving_30x30.png"/>
+            <h2 data-i18n="Swimming/Diving">Swimming/Diving</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_SwimmingDiving_30x30.png"/>
             <input name="attr_swimming_diving" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Climbing Gear">Climbing Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_ClimbingGear_30x30.png"/>
-            <input name="attr_climbinggear" type="number" value=""/>
+            <input name="attr_climbing_gear" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Medical Gear">Medical Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_MedicalGear_30x30.png"/>
-            <input name="attr_medicalgear" type="number" value=""/>
+            <input name="attr_medical_gear" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Tools">Tools</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Tools_30x30.png"/>
@@ -796,11 +796,11 @@
           </div>
           <div class="kits">
             <h2 data-i18n="Climbing Gear">Climbing Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_ClimbingGear_30x30.png"/>
-            <input name="attr_climbinggear" type="number" value=""/>
+            <input name="attr_climbing_gear" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Medical Gear">Medical Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_MedicalGear_30x30.png"/>
-            <input name="attr_medicalgear" type="number" value=""/>
+            <input name="attr_medical_gear" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Tools">Tools</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Tools_30x30.png"/>
@@ -808,11 +808,11 @@
           </div>
           <div class="kits">
             <h2 data-i18n="Command App">Command App</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_CommandApp_30x30.png"/>
-            <input name="attr_commandapp" type="number" value=""/>
+            <input name="attr_command_app" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Recon Gear">Recon Gear</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_ReconGear_30x30.png"/>
-            <input name="attr_recongear" type="number" value=""/>
+            <input name="attr_recon_gear" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Value">Value</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Value_30x30.png"/>
@@ -824,7 +824,7 @@
           </div>
           <div class="kits">
             <h2 data-i18n="Survival Kit">Survival Kit</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_SurvivalKit_30x30.png"/>
-            <input name="attr_survivalkit" type="number" value=""/>
+            <input name="attr_survival_kit" type="number" value=""/>
           </div>
           <div class="kits">
             <h2 data-i18n="Vehicles">Vehicles</h2><img alt="" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_Vehicles_30x30.png"/>
