fixing label usage and replacing with span

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -52,17 +52,19 @@
     </tr>
 </table>
 
-<input type="radio" class="sheet-pages sheet-page1 sheet-hidden" id="page1" name="attr_pagenumber" title="Page 1"
+<!-- <div class="sheet-page-container"> -->
+<input type="radio" class="sheet-pages sheet-page1" name="attr_pagenumber" title="Page 1"
     value="1" />
-<label class="sheet-page-label" for="page1">Character Sheet</label>
+<span class="sheet-page-label sheet-page-label-1">Character Sheet</span>
 
-<input type="radio" class="sheet-pages sheet-page2 sheet-hidden" id="page2" name="attr_pagenumber" title="Page 2"
+<input type="radio" class="sheet-pages sheet-page2" name="attr_pagenumber" title="Page 2"
     value="2" />
-<label class="sheet-page-label" for="page2">Progress</label>
+<span class="sheet-page-label sheet-page-label-2">Progress</span>
 
-<input type="radio" class="sheet-pages sheet-page3 sheet-hidden" id="page3" name="attr_pagenumber" title="Page 3"
+<input type="radio" class="sheet-pages sheet-page3" name="attr_pagenumber" title="Page 3"
     value="3" />
-<label class="sheet-page-label" for="page3">Assets</label>
+<span class="sheet-page-label sheet-page-label-3">Assets</span>
+<!-- </div> -->
 
 <div class="page1tab">
     <hr>
@@ -285,9 +287,11 @@
                     </div>
                     <div class="sheet-vow">
                         <div>
-                            <input class="sheet-clear-vow sheet-hidden" id="clear-vow-1" type="checkbox"
-                                name="attr_clear_vow_1">
-                            <label class="sheet-vow-clear-label" for="clear-vow-1">Clear</label>
+                            <input class="sheet-clear-vow sheet-hidden" type="radio"
+                                name="attr_clear_vow" value="0">
+                            <input class="sheet-clear-vow" type="radio"
+                                name="attr_clear_vow" value="1">
+                            <span class="sheet-vow-clear-label">Clear</span>
                             <select name="attr_vow1-0" class="sheet-progress-input">
                                 <option value="0" selected></option>
                                 <option value="1">-</option>
@@ -383,9 +387,9 @@
                     </div>
                     <div class="sheet-vow">
                         <div>
-                            <input class="sheet-clear-vow sheet-hidden" id="clear-vow-2" type="checkbox"
-                                name="attr_clear_vow_2">
-                            <label class="sheet-vow-clear-label" for="clear-vow-2">Clear</label>
+                            <input class="sheet-clear-vow" type="radio"
+                                name="attr_clear_vow" value="2">
+                            <span class="sheet-vow-clear-label">Clear</span>
                             <select name="attr_vow2-0" class="sheet-progress-input">
                                 <option value="0" selected></option>
                                 <option value="1">-</option>
@@ -481,9 +485,9 @@
                     </div>
                     <div class="sheet-vow">
                         <div>
-                            <input class="sheet-clear-vow sheet-hidden" id="clear-vow-3" type="checkbox"
-                                name="attr_clear_vow_3">
-                            <label class="sheet-vow-clear-label" for="clear-vow-3">Clear</label>
+                            <input class="sheet-clear-vow" type="radio"
+                                name="attr_clear_vow" value="3">
+                            <span class="sheet-vow-clear-label">Clear</span>
                             <select name="attr_vow3-0" class="sheet-progress-input">
                                 <option value="0" selected></option>
                                 <option value="1">-</option>
@@ -579,9 +583,9 @@
                     </div>
                     <div class="sheet-vow">
                         <div>
-                            <input class="sheet-clear-vow sheet-hidden" id="clear-vow-4" type="checkbox"
-                                name="attr_clear_vow_4">
-                            <label class="sheet-vow-clear-label" for="clear-vow-4">Clear</label>
+                            <input class="sheet-clear-vow" type="radio"
+                                name="attr_clear_vow" value="4">
+                            <span class="sheet-vow-clear-label">Clear</span>
                             <select name="attr_vow4-0" class="sheet-progress-input">
                                 <option value="0" selected></option>
                                 <option value="1">-</option>
@@ -677,9 +681,9 @@
                     </div>
                     <div class="sheet-vow">
                         <div>
-                            <input class="sheet-clear-vow sheet-hidden" id="clear-vow-5" type="checkbox"
-                                name="attr_clear_vow_5">
-                            <label class="sheet-vow-clear-label" for="clear-vow-5">Clear</label>
+                            <input class="sheet-clear-vow" type="radio"
+                                name="attr_clear_vow" value="5">
+                            <span class="sheet-vow-clear-label">Clear</span>
                             <select name="attr_vow5-0" class="sheet-progress-input">
                                 <option value="0" selected></option>
                                 <option value="1">-</option>
@@ -4062,22 +4066,24 @@ on('change:momentum change:momentum_max', function() {
         if(parseInt(values.momentum) > parseInt(values.momentum_max)) setAttrs({ momentum: parseInt(values.momentum_max)});
     });
 });
-on('change:clear_vow_1', function() {
-    setAttrs({ 'vow1-0': '0', 'vow1-1': '0', 'vow1-2': '0', 'vow1-3': '0', 'vow1-4': '0', 'vow1-5': '0', 'vow1-6': '0', 'vow1-7': '0', 'vow1-8': '0', 'vow1-9': '0', clear_vow_1: 'off' });
+on('change:clear_vow', function(values) {
+    console.log(values)
+    if(values.newValue === '1'){
+        setAttrs({ 'vow1-0': '0', 'vow1-1': '0', 'vow1-2': '0', 'vow1-3': '0', 'vow1-4': '0', 'vow1-5': '0', 'vow1-6': '0', 'vow1-7': '0', 'vow1-8': '0', 'vow1-9': '0', clear_vow: '0' });
+    }
+    if(values.newValue === '2'){
+        setAttrs({ 'vow2-0': '0', 'vow2-1': '0', 'vow2-2': '0', 'vow2-3': '0', 'vow2-4': '0', 'vow2-5': '0', 'vow2-6': '0', 'vow2-7': '0', 'vow2-8': '0', 'vow2-9': '0', clear_vow: '0' });
+    }
+    if(values.newValue === '3'){
+        setAttrs({ 'vow3-0': '0', 'vow3-1': '0', 'vow3-2': '0', 'vow3-3': '0', 'vow3-4': '0', 'vow3-5': '0', 'vow3-6': '0', 'vow3-7': '0', 'vow3-8': '0', 'vow3-9': '0', clear_vow: '0' });
+    }
+    if(values.newValue === '4'){
+        setAttrs({ 'vow4-0': '0', 'vow4-1': '0', 'vow4-2': '0', 'vow4-3': '0', 'vow4-4': '0', 'vow4-5': '0', 'vow4-6': '0', 'vow4-7': '0', 'vow4-8': '0', 'vow4-9': '0', clear_vow: '0' });
+    }
+    if(values.newValue === '5'){
+        setAttrs({ 'vow5-0': '0', 'vow5-1': '0', 'vow5-2': '0', 'vow5-3': '0', 'vow5-4': '0', 'vow5-5': '0', 'vow5-6': '0', 'vow5-7': '0', 'vow5-8': '0', 'vow5-9': '0', clear_vow: '0' });
+    }
 });
-on('change:clear_vow_2', function() {
-    setAttrs({ 'vow2-0': '0', 'vow2-1': '0', 'vow2-2': '0', 'vow2-3': '0', 'vow2-4': '0', 'vow2-5': '0', 'vow2-6': '0', 'vow2-7': '0', 'vow2-8': '0', 'vow2-9': '0', clear_vow_2: 'off' });
-});
-on('change:clear_vow_3', function() {
-    setAttrs({ 'vow3-0': '0', 'vow3-1': '0', 'vow3-2': '0', 'vow3-3': '0', 'vow3-4': '0', 'vow3-5': '0', 'vow3-6': '0', 'vow3-7': '0', 'vow3-8': '0', 'vow3-9': '0', clear_vow_3: 'off' });
-});
-on('change:clear_vow_4', function() {
-    setAttrs({ 'vow4-0': '0', 'vow4-1': '0', 'vow4-2': '0', 'vow4-3': '0', 'vow4-4': '0', 'vow4-5': '0', 'vow4-6': '0', 'vow4-7': '0', 'vow4-8': '0', 'vow4-9': '0', clear_vow_4: 'off' });
-});
-on('change:clear_vow_5', function() {
-    setAttrs({ 'vow5-0': '0', 'vow5-1': '0', 'vow5-2': '0', 'vow5-3': '0', 'vow5-4': '0', 'vow5-5': '0', 'vow5-6': '0', 'vow5-7': '0', 'vow5-8': '0', 'vow5-9': '0', clear_vow_5: 'off' });
-});
-
 on('change:repeating_assets:assettype', function(values) {
     setAttrs({
         ['repeating_assets_Asset' + values.previousValue]: 'off',
