--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -24,6 +24,7 @@
 					<li>General tab. Change layout for Turning and Deceleration table and fixed some bugs in the process.</li>
 					<li>Combat tab. Added Demolition combat tool. Code provided by Savage. Thank you Savage!</li>
 					<li>Combat tab - Thrown Object tool. Thrust damage was not updating correctly when thrust damage changed.</li>
+					<li>See Updates tab for more detailed information.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 				<button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -4580,6 +4581,7 @@
 		<li>General tab. Change Thrust and Swing damage to use formula instead of a lookup table that stops at ST 100.</li>
 		<li>Combat tab - Thrown Object tool. Thrust damage was not updating correctly when thrust damage changed.</li>
 		<li>Inventory tab - Grand Total Weight. Changed to use <b>on</b> change event.</li>
+		<li>General tab - Custom Pools section. Added some height to Current text box so underline is visible.</li>
 	</ul>
 	
 	<h4>Vesion: 1.7.2</h4>
