IZ3.0 Strain and Street Cred UI
Building out the basic UI work for IZ 3.0's Strain and Street Cred

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -3162,7 +3162,7 @@
         })
     });
 
-    const derivedstats = ["usecharisma","useacademics","Corruption","potsmFame","izFirewall","hfGlory","DLGrit","neuraltoughness","ripReason","tdsanity","ripStatus","izStrain","izStreetCred", "zStrainThree"];
+    const derivedstats = ["usecharisma","useacademics","Corruption","potsmFame","izFirewall","hfGlory","DLGrit","neuraltoughness","ripReason","tdsanity","ripStatus","izStrain","izStreetCred", "izStrainThree"];
     const derivedlabels = ["Charisma","Academics","Corruption","Fame","Firewall","Glory","Grit","Neural Toughness","Reason","Sanity","Status","Strain","Street Cred", "Strain"];
     const derivedcurfields = ["@{charismaCur}","@{academicsCur}","@{corruptionCur}","@{fameCur}","@{FirewallCur}","@{gloryCur}","@{gritCur}","@{ntoughnesscur}","@{reasonCur}","@{sanityCur}","@{statusCur}","@{StrainCur}","@{StreetCredCur}"];
     const derivedStatBlock = function() {
@@ -6108,9 +6108,9 @@
     							<div class="sheet-derivecurrent"><input type="number" name="attr_corruptionCur" title="@{corruptionCur}" class="sheet-derivedStat" readonly /></div>
     							<div class="sheet-derivemisc">&nbsp;</div>
     					    </div>
-    					    <!-- IZ Street Cred 2.0 -->
+    					    <!-- IZ 2.0 Street Cred -->
     					    <input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCred" />
-    					    <div class="sheet-basederived sheet-StreetCred sheet-Strain sheet-Strain-Three" style='font-weight: bold; font-size: .75em;'>
+    					    <div class="sheet-basederived sheet-StreetCred sheet-Strain sheet-StreetCredThree sheet-StrainThree" style='font-weight: bold; font-size: .75em;'>
     					        <div class="sheet-derivelabel">&nbsp;</div>
     					        <div class="sheet-derivebase" data-i18n="base">Base</div>
     					        <div class="sheet-derivemod" data-i18n="mod">Mod</div>
@@ -6124,7 +6124,7 @@
     							<div class="sheet-derivecurrent"><input type="number" name="attr_StreetCredCur" title="@{StreetCredCur}" class="sheet-derivedStat" readonly /></div>
     							<div class="sheet-derivemisc"><input type="number" name="attr_maxStreetCredCur" title="@{maxStreetCredCur}" class="sheet-derivedStat" value="10" /></div>
     					    </div>
-    					    <!-- IZ Strain 2.0 -->
+    					    <!-- IZ 2.0 Strain -->
     					    <input type="checkbox" class="sheet-useStrain" style="width: 15px; display: none;" name="attr_izStrain" />
     					    <div class="sheet-basederived sheet-Strain">
     					        <div class="sheet-derivelabel" data-i18n="strain">Strain</div>
@@ -6147,7 +6147,7 @@
 							</div>
 							<!-- IZ 3.0 Strain -->
 							<input type="checkbox" class="sheet-useStrainThree" style="width: 15px; display: none;" name="attr_izStrainThree" />
-    					    <div class="sheet-basederived sheet-Strain-Three">
+    					    <div class="sheet-basederived sheet-StrainThree">
 								<div class="sheet-derivelabel" data-i18n="strain-three">Strain</div>
 								<div class="sheet-derivebase">
     					            <input type="number" name="attr_StrainThree" title="@{strainthree}">
@@ -6158,7 +6158,24 @@
     								<input class="sheet-critical" type="checkbox" name="attr_straincrit" value="1" />
     							    <input type="number" name="attr_StrainCur" title="@{StrainCur}" class="sheet-derivedStat sheet-strain" value="0" readonly />
     							</div>
-    							<div class="sheet-derivemisc"><input class="sheet-derivedStat" type="number" name="attr_StrainThree_max" title="@{StrainThree_max}" /></div>
+    							<div class="sheet-derivemisc"><input type="number" name="attr_StrainThree_max" title="@{StrainThree_max}" class="sheet-derivedStat" /></div>
+							</div>
+							<!-- IZ 3.0 Street Cred-->
+							<input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCredThree" />
+							<div class="sheet-basederived sheet-StreetCredThree">
+    					        <div class="sheet-derivelabel" data-i18n="street-cred-three">Street Cred</div>
+    					        <div class="sheet-derivebase">
+    					            <select name="attr_streetcredthree" title="@{StreetCredThree}" class="sheet-dtype" value="6">
+    									<option value="4">d4</option>
+    									<option value="6">d6</option>
+    									<option value="8">d8</option>
+    									<option value="10">d10</option>
+    									<option value="12">d12</option>
+    								 </select>
+    					        </div>
+    							<div class="sheet-derivemod"><input type="number" name="attr_StreetCredThreeMod" title="@{StreetCredThreeMod}" class="sheet-derivedStat" value="0" /></div>
+    							<div class="sheet-derivecurrent"><input type="number" name="attr_StreetCredThreeCur" title="@{StreetCredThreeCur}" class="sheet-derivedStat" value="0" readonly /></div>
+    							<div class="sheet-derivemisc"><input type="number" name="attr_StreetCredThree_max" title="@{StreetCredThreeMax}" class="sheet-derivedStat"/></div>
 							</div>
     					</div>
     					<hr class="sheet-mischr" style="border: .45px dashed silver; margin: -4px 0px 8px 0px;"  />
