Typos and fixes
Also gitignoring my SWTRedesign.js so I can more easily edit the sheet workers

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -8165,6 +8165,7 @@
     					<label class='sheet-quickItem'><input type='checkbox' name='attr_settingconfig' value='4' /> <span data-i18n="east-texas-university">East Texas University</span></label>
     					<label class='sheet-quickItem'><input type='checkbox' name='attr_settingconfig' value='5' /> <span data-i18n="hellfrost">Hellfrost</span></label>
     					<label class="sheet-quickItem"><input type='checkbox' name='attr_settingconfig' value='6' /> <span data-i18n="interface-zero">Interface Zero 2.0</span></label>
+						<label class="sheet-quickItem"><input type='checkbox' name='attr_settingconfig' value='15' /> <span data-i18n="interface-zero">Interface Zero 3.0</span></label>
     					<label class="sheet-quickItem"><input type='checkbox' name='attr_settingconfig' value='7' /> <span data-i18n="lankhmar">Lankhmar</span></label>
     					<label class="sheet-quickItem"><input type='checkbox' name='attr_settingconfig' value='8' /> <span data-i18n="last-parsec">Last Parsec</span></label>
     					<label class="sheet-quickItem"><input type='checkbox' name='attr_settingconfig' value='9' /> <span data-i18n="low-life">Low Life</span></label>
@@ -8173,7 +8174,7 @@
     					<label class="sheet-quickItem"><input type='checkbox' name='attr_settingconfig' value='13' /> <span data-i18n="rifts">Rifts</span></label>
     					<label class="sheet-quickItem"><input type='checkbox' name='attr_settingconfig' value='14' /> <span data-i18n="rippers">Rippers</span></label>
     					<label class="sheet-quickItem"><input type='checkbox' name='attr_settingconfig' value='12' /> <span data-i18n="tour-of-darkness">Tour of Darkness</span></label>
-        			</div>
+					</div>
     			</div>
     			<div class="sheet-configSection">
     			    <input type="checkbox" class="sheet-hideBG" name="attr_hideBG" /><span class="sheet-showBG"></span>
@@ -8206,7 +8207,7 @@
     					<label class='sheet-logoItem'><input type="checkbox" class="sheet-ShowLogo" name="attr_logo" value="14" data-i18n-title="east-texas-university"  title="East Texas University" /> <span data-i18n="east-texas-university">East Texas University</span></label>
     					<label class='sheet-logoItem'><input type="checkbox" class="sheet-ShowLogo" name="attr_logo" value="10" data-i18n-title="hellfrost"  title="Hellfrost" style="width: 15px;" /> <span data-i18n="hellfrost">Hellfrost</span></label>
     					<label class='sheet-logoItem'><input type="checkbox" class="sheet-ShowLogo" name="attr_logo" value="11" data-i18n-title="hellfrost-land-of-fire"  title="Hellfrost: Land of Fire" style="width: 15px;" /> <span data-i18n="hellfrost-land-of-fire">Hellfrost: Land of Fire</span></label>
-    					<label class='sheet-logoItem'><input type="checkbox" class="sheet-ShowLogo" name="attr_logo" value="9"  data-i18n-title="interface-zero" title="Interface Zero 2.0" style="width: 15px;" /> <span data-i18n="inteface-zero-20">Interface Zero 2.0</span></label>
+    					<label class='sheet-logoItem'><input type="checkbox" class="sheet-ShowLogo" name="attr_logo" value="9"  data-i18n-title="interface-zero" title="Interface Zero 2.0" style="width: 15px;" /> <span data-i18n="interface-zero-20">Interface Zero 2.0</span></label>
     					<label class='sheet-logoItem'><input type="checkbox" class="sheet-ShowLogo" name="attr_logo" value="12"  data-i18n-title="lankhmar" title="Lankhmar" style="width: 15px;" /> <span data-i18n="lankhmar">Lankhmar</span></label>
     					<label class='sheet-logoItem'><input type="checkbox" class="sheet-ShowLogo" name="attr_logo" value="3"  data-i18n-title="the-last-parsec" title="The Last Parsec" /> <span data-i18n="the-last-parsec">The Last Parsec</span></label>
     					<label class='sheet-logoItem'><input type="checkbox" class="sheet-ShowLogo" name="attr_logo" value="5" data-i18n-title="necessary-evil"  title="Necessary Evil" /> <span data-i18n="necessary-evil">Necessary Evil</span></label>
