rename images and save changes"

--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -1,9 +1,5 @@
 
 <input name="attr_version" type="hidden" value="1"/>
-<div class="grid navigation">
-  <input name="attr_tab" type="radio" value="main"/><span data-i18n="Main">val</span>
-  <input name="attr_tab" type="radio" value="equipment"/><span data-i18n="Equipment">val</span>
-</div>
 <div class="container">
   <input name="attr_tab" type="hidden" value="main"/>
   <div class="main tab">
@@ -622,6 +618,10 @@
           </div>
         </div>
       </div>
+      <div class="equipment grid box">
+        <h1 class="green-header center" data-i18n="Equipment">Equipment</h1>
+        <textarea data-i18n-placeholder="Equipment" name="attr_equipment" placeholder="Equipment" value=""></textarea>
+      </div>
     </div>
     <div class="column">
       <div class="grid box logo"><img alt="Outbreak Character Sheet" src="https://i.imgur.com/css0cBR.png"/></div>
@@ -839,7 +839,6 @@
         </div>
       </div>
     </div>
-    <div class="equipment tab"></div>
   </div>
 </div>
 <rolltemplate class="sheet-rolltemplate-ou">
