--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -624,10 +624,10 @@
       </div>
     </div>
     <div class="column">
-      <div class="grid box logo"><img alt="Outbreak Character Sheet" src="https://i.imgur.com/css0cBR.png"/></div>
+      <div class="grid box logo"><img alt="Outbreak Character Sheet" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Logo_340pxWx90pxH.png"/></div>
       <div class="grid box dice-box">
         <button data-i18n="Dice Pool" name="roll_Pool" type="roll" value="&amp;{template:ou-small} {{Diff=@{difficulty_dice}}} {{Spd1=@{speed_dice}}} {{Dmg=@{damage_dice}}} {{Deplet=@{depletion_dice}}} {{DieDif=@{difficulty_die}}} {{DieSpd=@{speed_die}}} {{DieDmg=@{damage_die}}} {{DieDep=@{depletion_die}}}"></button>
-        <div class="die"><img src="https://i.imgur.com/lum5jcz.jpg" title="Difficult Dice"/>
+        <div class="die"><img alt="difficulty dice" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_difficulty_16pxW_x16pxH.jpg" title="Difficult Dice"/>
           <select name="attr_difficulty_dice">
             <option data-i18n="0" value="[[0d6!p]]">0</option>
             <option data-i18n="1" value="[[1d6!p]]">1</option>
@@ -637,7 +637,7 @@
             <option data-i18n="5" value="[[5d6!p]]">5</option>
           </select>
         </div>
-        <div class="die"><img src="https://i.imgur.com/QIhFKV7.jpg" title="Speed Dice"/>
+        <div class="die"><img alt="speed dice" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_speed_16pxW_x16pxH.jpg"/>
           <select name="attr_speed_dice">
             <option data-i18n="0" value="[[0d6]]"></option>
             <option data-i18n="1" value="[[1d6]]"></option>
@@ -647,7 +647,7 @@
             <option data-i18n="5" value="[[1d6]] [[1d6]] [[1d6]] [[1d6]] [[1d6]]"></option>
           </select>
         </div>
-        <div class="die"><img src="https://i.imgur.com/EkBzVOm.jpg" title="Damage Dice"/>
+        <div class="die"><img alt="damage dice" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_damage_16pxW_x16pxH.jpg"/>
           <select name="attr_damage_dice">
             <option data-i18n="0" value="[[0d6]]"></option>
             <option data-i18n="1" value="[[1d6]]"></option>
@@ -657,7 +657,7 @@
             <option data-i18n="5" value="[[1d6]] [[1d6]] [[1d6]] [[1d6]] [[1d6]]"></option>
           </select>
         </div>
-        <div class="die"><img src="https://i.imgur.com/JyxTN3O.jpg" title="Depletion Dice" border="1"/>
+        <div class="die"><img alt="depletion dice" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_depletion_16pxW_x16pxH.jpg"/>
           <select name="attr_depletion_dice">
             <option data-i18n="0" value="[[0d6]]"></option>
             <option data-i18n="1" value="[[1d6]]"></option>
