upate roll template

--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -900,7 +900,11 @@
             {{/rollTotal() DieDep 5}}
 		</tr>
 		{{/rollGreater() Deplet 0}}
-        <tr><td colspan="3" style="word-spacing: -3px;font-size: .9em;"><b>Roll dice for all:</b><img src="https://i.imgur.com/QIhFKV7.jpg" alt="Speed Die" width="16" height="16"><img src="https://i.imgur.com/EkBzVOm.jpg" alt="Damage Die" width="16" height="16"><img src="https://i.imgur.com/EvcDFYc.jpg" alt="Depletion Die" width="16" height="16"></td>
+        <tr><td colspan="3" style="word-spacing: -3px;font-size: .9em;"><b>Roll dice for all:</b>
+            <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_speed_16pxW_x16pxH.jpg" alt="Speed Die" width="16" height="16">
+            <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_damage_16pxW_x16pxH.jpg" alt="Damage Die" width="16" height="16">
+            <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_depletion_16pxW_x16pxH.jpg" alt="Depletion Die" width="16" height="16">
+        </td>
     </table>
 </rolltemplate>
 <rolltemplate class="sheet-rolltemplate-ou-small">
@@ -941,7 +945,10 @@
             {{/rollTotal() DieDep 5}}
 		</tr>
 		{{/rollGreater() Deplet 0}}
-        <tr><td style="word-spacing: -3px;font-size: .9em;"><b>Roll dice for all:</b><img src="https://i.imgur.com/QIhFKV7.jpg" alt="Speed Die" width="16" height="16"><img src="https://i.imgur.com/EkBzVOm.jpg" alt="Damage Die" width="16" height="16"><img src="https://i.imgur.com/EvcDFYc.jpg" alt="Depletion Die" width="16" height="16"></td>
+        <tr><td style="word-spacing: -3px;font-size: .9em;"><b>Roll dice for all:</b>
+            <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_speed_16pxW_x16pxH.jpg" alt="Speed Die" width="16" height="16">
+            <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_damage_16pxW_x16pxH.jpg" alt="Damage Die" width="16" height="16">
+            <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_depletion_16pxW_x16pxH.jpg" alt="Depletion Die" width="16" height="16"></td>
         </tr>
     </table>
 </rolltemplate>
