--- a/Outbreak/src/pug/rolltemplate.html
+++ b/Outbreak/src/pug/rolltemplate.html
@@ -103,7 +103,7 @@
             {{/rollTotal() DieDep 5}}
 		</tr>
 		{{/rollGreater() Deplet 0}}
-        <tr><td style="word-spacing: -3px;font-size: .9em;"><b>Roll dice for all:</b>
+        <tr><td style="word-spacing: -3px;font-size: .9em;"><b>Reroll:</b>
             <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_speed_16pxW_x16pxH.jpg" alt="Speed Die" width="16" height="16">
             <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_damage_16pxW_x16pxH.jpg" alt="Damage Die" width="16" height="16">
             <img src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_depletion_16pxW_x16pxH.jpg" alt="Depletion Die" width="16" height="16"></td>
